--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,15 @@
 		}
 	},
 	"require": {
+		"php": ">=5.4.0",
 		"cboden/ratchet": "*",
-		"react/zmq": "*"
+		"react/event-loop": "*",
+		"react/promise": "*",
+		"react/zmq": "*",
+		"react/mysql": "*",
+		"react/http": "*",
+		"wyrihaximus/cpu-core-detector": "1.0.0-alpha1",
+		"wyrihaximus/react-child-process-pool": "1.0.0-beta5",
+		"react/filesystem": "dev-master"
 	}
 }
