--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 	},
 	"require": {
 		"php": ">=5.4.0",
+		"monolog/monolog": "*",
 		"cboden/ratchet": "*",
 		"react/event-loop": "*",
 		"react/promise": "*",
